--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -6,6 +6,10 @@
 		<style> body { margin: 0; } canvas { width: 100%; height: 100% } </style> 
 	</head> 
 	<body>
+		<div id="infos" style="position: absolute; margin-top: 10px;
+			margin-left: 10px; font-family: Arial; color: white;
+			background-color:rgba(128, 128, 128, .7);padding:4px;">
+		</div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
 	</body>
 </html>
