--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -11,5 +11,9 @@
 			background-color:rgba(128, 128, 128, .7);padding:4px;">
 		</div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
+		<!-- Simple lecture audio -->
+		<audio src="assets/InitialD-DejaVu.ogg" autoplay>
+			Votre navigateur ne supporte pas l'élément <code>audio</code>.
+		</audio>
 	</body>
 </html>
