--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style> body { margin: 0; } canvas { width: 100%; height: 100% } </style> 
+		<script src="lib/moment-with-locales.min.js"></script>
+		<script>
+			moment.locale("fr");
+		</script>
 	</head> 
 	<body>
 		<div id="infos" style="position: absolute; margin-top: 10px;
