Mofif test musique

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -10,14 +10,13 @@
 		</script>
 	</head> 
 	<body>
+		<audio src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay>
+			Votre navigateur ne supporte pas l'élément <code>audio</code>.
+		</audio>
 		<div id="infos" style="position: absolute; margin-top: 10px;
 			margin-left: 10px; font-family: Arial; color: white;
 			background-color:rgba(128, 128, 128, .7);padding:4px;">
 		</div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
-		<!-- Simple lecture audio -->
-		<audio src="assets/InitialD-DejaVu.ogg" autoplay>
-			Votre navigateur ne supporte pas l'élément <code>audio</code>.
-		</audio>
 	</body>
 </html>
