--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -6,9 +6,7 @@
 		<style> body { margin: 0; } canvas { width: 100%; height: 100% } </style> 
 	</head> 
 	<body>
-		<div id="infos" style="position: absolute; margin-top: 10px;
-			margin-left: 10px; font-family: Arial; color: white;
-			background-color:rgba(128, 128, 128, .7);padding:4px;">
+		<div id="infos" >
 		</div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
 		<!-- Simple lecture audio -->
