Ajout du bruit du vaisseau

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -10,16 +10,15 @@
 		</script>
 	</head> 
 	<body>
-<<<<<<< HEAD
-		<div id="infos" >
-=======
-		<audio src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay>
+		<audio id="audioMusic" src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay loop>
+			Votre navigateur ne supporte pas l'élément <code>audio</code>.
+		</audio>
+		<audio id="audioStarship" src="assets/bruitVaisseau.ogg" type="audio/ogg" autoplay loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
 		<div id="infos" style="position: absolute; margin-top: 10px;
 			margin-left: 10px; font-family: Arial; color: white;
 			background-color:rgba(128, 128, 128, .7);padding:4px;">
->>>>>>> 4363cacc29ef2d66025730e0791f3b46ab9bbb7e
 		</div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
 	</body>
