Début de l'implémentation du fantôme

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -16,10 +16,7 @@
 		<audio id="audioStarship" src="assets/bruitVaisseau.ogg" type="audio/ogg" autoplay loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
-		<div id="infos" style="position: absolute; margin-top: 10px;
-			margin-left: 10px; font-family: Arial; color: white;
-			background-color:rgba(128, 128, 128, .7);padding:4px;">
-		</div>
+		<div id="infos"></div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
 	</body>
 </html>
