Ajout du meilleur tour

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -10,6 +10,7 @@
 		</script>
 	</head> 
 	<body>
+		<div id="menu"></div>
 		<audio id="audioMusic" src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
