Creation de l'helico

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -10,7 +10,6 @@
 		</script>
 	</head> 
 	<body>
-		<div id="menu"></div>
 		<audio id="audioMusic" src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
@@ -18,6 +17,7 @@
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
 		<div id="infos"></div>
+		<div id="fin5Tours"></div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
 	</body>
 </html>
