--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -16,6 +16,7 @@
 		<audio id="audioStarship" src="assets/bruitVaisseau.ogg" type="audio/ogg" autoplay loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
+		<div id="mainMenu"></div>
 		<div id="infos"></div>
 		<div id="fin5Tours"></div>
 		<script data-main="main.A1.js" src="lib/require.js"></script>
