Prise en compte des choix du menu principal. Ajout du son de l'helico et d'un bruitage lors de la récupération de caisse

--- a/marace10.A1.html
+++ b/marace10.A1.html
@@ -10,10 +10,16 @@
 		</script>
 	</head> 
 	<body>
-		<audio id="audioMusic" src="assets/InitialD-DejaVu.ogg" type="audio/ogg" autoplay loop>
+		<audio id="audioMusic" src="assets/InitialD-DejaVu.ogg" type="audio/ogg" loop>
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
-		<audio id="audioStarship" src="assets/bruitVaisseau.ogg" type="audio/ogg" autoplay loop>
+		<audio id="audioStarship" src="assets/bruitVaisseau.ogg" type="audio/ogg" loop>
+			Votre navigateur ne supporte pas l'élément <code>audio</code>.
+		</audio>
+		<audio id="audioHelico" src="assets/bruitHelico.ogg" type="audio/ogg" loop>
+			Votre navigateur ne supporte pas l'élément <code>audio</code>.
+		</audio>
+		<audio id="audioCrate" src="assets/bruitCrate.ogg" type="audio/ogg">
 			Votre navigateur ne supporte pas l'élément <code>audio</code>.
 		</audio>
 		<div id="mainMenu"></div>
