--- a/marace10.4.html
+++ b/marace10.4.html
@@ -6,7 +6,8 @@
 		<style> body { margin: 0; } canvas { width: 100%; height: 100% } </style> 
 	</head> 
 	<body>
-		<p onClick="changeParticles()" style="position: absolute; margin-top: 10px;margin-left: 10px;font-family: Arial; color: white;background-color:rgba(128, 128, 128, .7);padding:4px;">
+		<p onClick="helico.activeParticles(document.getElementById('pleft').checked, document.getElementById('pmiddle').checked, document.getElementById('pright').checked,)" 
+		style="position: absolute; margin-top: 10px;margin-left: 10px;font-family: Arial; color: white;background-color:rgba(128, 128, 128, .7);padding:4px;">
 			Démo hélicoptère et particules <i>Aurélien ANNE, Marie COISNARD, Kevin SALMON</i><br>
 			Activer les particules sur les turbines : 
 			<input type="checkbox" id="pleft" name="pleft" checked>
